force-app/main/default/objects/Creditsafe_Settings__c/Creditsafe_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Creditsafe Settings</label>
</CustomObject>