force-app/main/default/objects/Creditsafe_Settings__c/fields/CreditsafePassword__c.field-meta.xml
<CustomField>
    <fullName>CreditsafePassword__c</fullName>
    <label>CreditsafePassword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>