force-app/main/default/objects/Creditsafe_Settings__c/fields/CreditsafeUser__c.field-meta.xml
<CustomField>
    <fullName>CreditsafeUser__c</fullName>
    <label>CreditsafeUser</label>
    <length>50</length>
    <type>Text</type>
</CustomField>