force-app/main/default/objects/Creditsafe_Settings__c/fields/Token_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Token_Last_Updated__c</fullName>
    <label>Token Last Updated</label>
    <type>DateTime</type>
</CustomField>